# PROJETO-BD

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: contrato_modelo.md  decisoes_pendentes.md
docs/modelagem/: README.md  der_hospital.drawio  modelo_relacional.md  normalizacao.md
docs/requisitos/: requisitos_etapa_1.md
scripts/: check_environment.py
sql/: 01_schema.sql  02_dados_teste.sql  03_crud_consultas.sql  04_consultas_analiticas.sql
src/projeto_hospital/: __init__.py  config.py  database.py
tests/: __init__.py  config.py  test_config.py  test_consultas_analiticas.py  test_crud_consultas.py  utils.py
