[project]
name = "projeto-hospital"
version = "0.1.0"
description = "Sistema de Gestão Hospitalar Dra. Yuska Maritan Brito"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "sqlparse>=0.5.5",
]

[tool.pytest.ini_options]
addopts = "-ra -p tests.config"
pythonpath = ["src", "."]
testpaths = ["tests"]
